--- a/theme.toml
+++ b/theme.toml
@@ -11,11 +11,11 @@ features = []
 min_version = "0.41.0"
 
 [author]
-  name = ""
+  name = "wdpm"
   homepage = ""
 
 # If porting an existing theme
 [original]
-  name = ""
-  homepage = ""
-  repo = ""
+  name = "zozo"
+  homepage = "https://github.com/varkai/hugo-theme-zozo"
+  repo = "https://github.com/varkai/hugo-theme-zozo"
