--- a/theme.toml
+++ b/theme.toml
@@ -1,18 +1,18 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "Simple"
+name = "Jian"
 license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
-description = ""
+licenselink = "https://github.com/wdpm/jian/blob/master/LICENSE"
+description = "Jian is a very simple but elegant Hugo theme for blog."
 homepage = "http://example.com/"
-tags = []
-features = []
-min_version = "0.41.0"
+tags = ["blog", "simple", "elegant", "valine", "rss", "syntax highlighting"]
+features = ["blog", "simple", "elegant", "valine", "rss", "syntax highlighting"]
+min_version = "0.73.0"
 
 [author]
   name = "wdpm"
-  homepage = ""
+  homepage = "https://github.com/wdpm/"
 
 # If porting an existing theme
 [original]
